--- a/public/home/home.html
+++ b/public/home/home.html
@@ -127,7 +127,8 @@
         </div>
         <div class="carousel-item">
           <img
-            src="/public/assets/images/dish-2.jpg"z
+            src="/public/assets/images/dish-2.jpg"
+            z
             class="d-block w-100"
             alt="..."
           />
@@ -170,23 +171,23 @@
         <div class="category-cards column">
           <a href="#Breakfast" class="cat-card">
             <img src="/public/assets/icons/breakfast.png" alt="" />
-            <h6>Breakfast</h6>
+            <h6>Bữa Sáng</h6>
           </a>
           <a href="#Vegan" class="cat-card">
             <img src="/public/assets/icons/vegetable.png" alt="" />
-            <h6>Vegetarian</h6>
+            <h6>Đồ Chay</h6>
           </a>
           <a href="#Meat" class="cat-card">
             <img src="/public/assets/icons/chicken.png" alt="" />
-            <h6>Chicken</h6>
+            <h6>Gà</h6>
           </a>
           <a href="#Dessert" class="cat-card">
             <img src="/public/assets/icons/dessert.png" alt="" />
-            <h6>Dessert</h6>
+            <h6>Đồ Ngọt</h6>
           </a>
           <a href="#Lunch" class="cat-card">
             <img src="/public/assets/icons/lunch.png" alt="" />
-            <h6>Lunch</h6>
+            <h6>Bữa Trưa</h6>
           </a>
           <a href="#Chocolate" class="cat-card">
             <img src="/public/assets/icons/chocolate.png" alt="" />
@@ -194,7 +195,7 @@
           </a>
         </div>
       </section>
-      <h1 id="Breakfast">Breakfast</h1>
+      <h1 id="Breakfast">Bữa Sáng</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -205,7 +206,7 @@
             trứng, thịt, xúc xích, pate. Hương vị đa dạng, phong phú, chấm cùng
             sốt cà chua hoặc tương ớt, thích hợp cho bữa sáng năng động.
           </p>
-          <a href="/public/detail_tutorial/DA/BMC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BMC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/BCH/6.1.jpg" alt="" />
@@ -215,7 +216,7 @@
             nước dùng ngọt thanh từ xương, giò heo mềm, thơm, rau sống phong
             phú, hành lá, tiêu xay tạo hương vị đậm đà, ấm áp và nóng hổi.
           </p>
-          <a href="/public/detail_tutorial/DA/BC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/BCN/1.jpg" alt="" />
@@ -225,7 +226,7 @@
             lợn, mộc nhĩ, hành phi giòn, chấm nước mắm pha chua ngọt, ăn kèm giá
             đỗ, rau thơm, cảm giác ngon miệng, hấp dẫn từng lớp bánh.
           </p>
-          <a href="/public/detail_tutorial/DA/BCN.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BCN.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/BK/6.1.jpg" alt="" />
@@ -235,10 +236,10 @@
             Thường gặp trong bữa gia đình, tiệc tùng, lễ hội. Ăn kèm bánh mì,
             cơm trắng, hoặc bún, đa dạng và hấp dẫn cho bữa ăn.
           </p>
-          <a href="/public/detail_tutorial/DA/BK.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BK.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Vegan">Vegetarian</h1>
+      <h1 id="Vegan">Đồ Chay</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -249,7 +250,7 @@
             ngon, hương vị thanh đạm. Ăn kèm rau sống, nước mắm chay, phù hợp
             cho người ăn chay hoặc muốn ăn nhẹ.
           </p>
-          <a href="/public/detail_tutorial/DA/BXC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BXC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/CCC/6.3.jpg" alt="" />
@@ -259,7 +260,7 @@
             ngọt thanh từ rau củ. Ăn kèm đậu hủ, nấm, cà chua, dọc mùng, giải
             nhiệt, phù hợp cho bữa cơm gia đình.
           </p>
-          <a href="/public/detail_tutorial/DA/CCC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/CCC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/CRC/6.3.jpg" alt="" />
@@ -269,7 +270,7 @@
             phù hợp cho người ăn chay, dùng kèm cơm trắng hoặc bánh mì, mang đến
             bữa ăn ấm áp, hạnh phúc.
           </p>
-          <a href="/public/detail_tutorial/DA/CRC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/CRC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/GCC/6.2.jpg" alt="" />
@@ -279,10 +280,10 @@
             bún, hương vị thanh mát. Chấm nước mắm chay hoặc tương đậu phộng,
             phù hợp cho bữa ăn nhẹ hoặc khai vị.
           </p>
-          <a href="/public/detail_tutorial/DA/GCC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/GCC.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Meat">Chicken</h1>
+      <h1 id="Meat">Gà</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -292,7 +293,7 @@
             Cháo gà: nước dùng ngọt thanh, gà thịt mềm, cháo trắng mịn, ấm nóng,
             thích hợp cho bữa sáng hoặc khi ốm.
           </p>
-          <a href="/public/detail_tutorial/DA/CG.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/CG.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/GCM/anhGCNM2.jpg" alt="" />
@@ -301,7 +302,7 @@
             Gà chiên nước mắm: thịt gà giòn rụm, sốt nước mắm đậm đà, hương thơm
             lừng, ngon miệng, phù hợp mọi bữa ăn.
           </p>
-          <a href="/public/detail_tutorial/DA/GCM.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/GCM.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/GN/6.2.jpg" alt="" />
@@ -310,7 +311,7 @@
             Gà nướng muối ớt: thịt gà mềm, da giòn, vị cay nồng của ớt và muối,
             thơm ngon, hấp dẫn, phù hợp cho bữa tiệc.
           </p>
-          <a href="/public/detail_tutorial/DA/GN.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/GN.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/MQ/6.2.jpg" alt="" />
@@ -319,10 +320,10 @@
             Mỳ Quảng gà: sợi mỳ dai, thịt gà thấm vị, nước dùng đậm đà, rau sống
             phong phú, món ăn truyền thống của Quảng Nam.
           </p>
-          <a href="/public/detail_tutorial/DA/MQ.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/MQ.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Dessert">Dessert</h1>
+      <h1 id="Dessert">Đồ Ngọt</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -333,7 +334,7 @@
             ngọt dịu, được ướp lạnh, làm từ trứng, sữa, đường, là món tráng
             miệng hấp dẫn.
           </p>
-          <a href="/public/detail_tutorial/DA/BFL.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BFL.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/CKM/6.3.jpg" alt="" />
@@ -343,7 +344,7 @@
             ngậy, ngọt vừa phải, thơm mát, món tráng miệng tuyệt vời cho ngày hè
             nóng bức.
           </p>
-          <a href="/public/detail_tutorial/DA/CKM.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/CKM.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/KTC/6.1.jpg" alt="" />
@@ -353,7 +354,7 @@
             nhiên, màu sắc bắt mắt, thích hợp giải nhiệt mùa hè, làm mới cảm
             giác.
           </p>
-          <a href="/public/detail_tutorial/DA/KTC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/KTC.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/SCNC/6.3.jpg" alt="" />
@@ -363,10 +364,10 @@
             nhiên, màu sắc bắt mắt, thích hợp giải nhiệt mùa hè, làm mới cảm
             giác.
           </p>
-          <a href="/public/detail_tutorial/DA/SCNC.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/SCNC.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Lunch">Lunch</h1>
+      <h1 id="Lunch">Bữa Trữa</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -377,7 +378,7 @@
             hương thơm của sả và mắm ruốc, rau sống đa dạng, món ăn đặc trưng
             của Huế.
           </p>
-          <a href="/public/detail_tutorial/DA/BBH.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/BBH.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/CL/6.2.jpg" alt="" />
@@ -387,7 +388,7 @@
             đa giòn, nước dùng thấm vị, món ăn truyền thống và nổi tiếng của Hội
             An.
           </p>
-          <a href="/public/detail_tutorial/DA/CL.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/CL.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/PHO/6.2.jpg" alt="" />
@@ -397,7 +398,7 @@
             xương, hành, ngò, chanh và ớt đi kèm, món ăn trưa hoặc sáng yêu
             thích tại Việt Nam.
           </p>
-          <a href="/public/detail_tutorial/DA/PHO.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/PHO.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/NN/6.3.jpg" alt="" />
@@ -407,7 +408,7 @@
             kèm bánh tráng, rau sống, đặc sản Nha Trang, thích hợp làm món nhậu
             hoặc khai vị.
           </p>
-          <a href="/public/detail_tutorial/DA/NN.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/NN.html">Xem Công Thức</a>
         </div>
       </div>
       <h1 id="Chocolate">chocolate</h1>
@@ -420,7 +421,7 @@
             Sữa socola có vị béo ngọt ngất ngây hòa quyện cùng chút đắng nhẹ đặc
             trưng từ bột cacao.
           </p>
-          <a href="/public/detail_tutorial/DA/STSCL.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/STSCL.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/SCLN/6.2.jpg" alt="" />
@@ -429,7 +430,7 @@
             Socola cacao nóng, thức uống hương cacao đậm, ngọt ngào, ấm áp,
             tuyệt vời cho ngày lạnh.
           </p>
-          <a href="/public/detail_tutorial/DA/SCLN.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/SCLN.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/PS/6.2.jpg" alt="" />
@@ -438,7 +439,7 @@
             Pudding Socola: mềm mịn, hương cacao đậm, ngọt ngào, thích hợp mọi
             người lớn nhỏ.
           </p>
-          <a href="/public/detail_tutorial/DA/PS.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/PS.html">Xem Công Thức</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/KSCL/6.1.jpg" alt="" />
@@ -447,7 +448,7 @@
             Kem socola: mát lạnh, hương vị cacao nguyên chất, ngọt ngào, hấp dẫn
             mọi lứa tuổi.
           </p>
-          <a href="/public/detail_tutorial/DA/KSCL.html">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/KSCL.html">Xem Công Thức</a>
         </div>
       </div>
     </section>
