--- a/public/home/home.html
+++ b/public/home/home.html
@@ -74,7 +74,7 @@
                 <a class="dropdown-item" href="#Breakfast">Bữa sáng</a>
                 <a class="dropdown-item" href="#Lunch">Bữa trưa</a>
                 <a class="dropdown-item" href="#Dessert">Ăn nhẹ</a>
-                <a class="dropdown-item" href="#Vegan">Món Rau</a>
+                <a class="dropdown-item" href="#Vegan">Món Chay</a>
                 <a class="dropdown-item" href="#Meat">Món gà</a>
               </div>
             </li>
@@ -175,15 +175,15 @@
           </a>
           <a href="#Vegan" class="cat-card">
             <img src="/public/assets/icons/vegetable.png" alt="" />
-            <h6>Đồ Chay</h6>
+            <h6>Món Chay</h6>
           </a>
           <a href="#Meat" class="cat-card">
             <img src="/public/assets/icons/chicken.png" alt="" />
-            <h6>Gà</h6>
+            <h6>Món Gà</h6>
           </a>
           <a href="#Dessert" class="cat-card">
             <img src="/public/assets/icons/dessert.png" alt="" />
-            <h6>Đồ Ngọt</h6>
+            <h6>Ăn Nhẹ</h6>
           </a>
           <a href="#Lunch" class="cat-card">
             <img src="/public/assets/icons/lunch.png" alt="" />
@@ -239,7 +239,7 @@
           <a href="/public/detail_tutorial/DA/BK.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Vegan">Đồ Chay</h1>
+      <h1 id="Vegan">Món Chay</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -283,7 +283,7 @@
           <a href="/public/detail_tutorial/DA/GCC.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Meat">Gà</h1>
+      <h1 id="Meat">Món Gà</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
@@ -323,7 +323,7 @@
           <a href="/public/detail_tutorial/DA/MQ.html">Xem Công Thức</a>
         </div>
       </div>
-      <h1 id="Dessert">Đồ Ngọt</h1>
+      <h1 id="Dessert">Ăn Nhẹ</h1>
 
       <div class="recipe-section">
         <div class="recipe-card">
